# phone-speaker-site

./: .gitignore  README.md  index.html  package-lock.json  package.json  privacy.html  script.js  style.css
apps/android-app/: local.properties  settings.gradle.kts
apps/android-app/app/: build.gradle.kts
apps/android-app/app/src/main/: AndroidManifest.xml
apps/android-app/app/src/main/java/com/mobilespeaker/app/: MainActivity.kt  MobileSpeakerApplication.kt
apps/android-app/app/src/main/java/com/mobilespeaker/app/audio/: AudioPlaybackEngine.kt  (+4 more)
apps/android-app/app/src/main/res/values/: strings.xml
apps/android-app/app/src/main/res/values-zh-rCN/: strings.xml
apps/pc-electron/: index.html  package.json
apps/pc-electron/electron/: main.cjs  preload.cjs
apps/pc-electron/installer/: README.txt  VB-CABLE-Setup-Assistant.bat  detect-vb-cable.ps1  ensure-vb-cable.ps1  install-vb-cable.ps1
apps/pc-electron/scripts/: generate-app-icon.ps1
apps/pc-electron/src/: App.tsx  api.ts  styles.css
docs/: android-p0-crash-root-cause-report-2026-04-09.md  release-artifacts.md
docs/protocol/: pc-api-contract.md
docs/setup/: quickstart.md  real-device-e2e.md
integrations/virtual-audio-driver/vb-cable/detect/: detect-vb-cable.ps1
integrations/virtual-audio-driver/vb-cable/scripts/: install-vb-cable.ps1
scripts/: android-static-check.mjs  check-audio-routing.ps1  mock-pc-service.mjs  pc-e2e.mjs  run-real-device-e2e.ps1  self-test.mjs  verify-e2e-acceptance.mjs
services/pc-audio-service-rust/: Cargo.toml
services/pc-audio-service-rust/src/: main.rs
(+15 files in other folders)
