[package]
name = "pc-audio-service-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
local-ip-address = "0.6"
mdns-sd = "0.11"
opus = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
